@@ -148,7 +148,7 @@ public class Settings extends AbstractView {
   public void unbind() throws ApplicationException
   {
     // Wir merken uns das aktive Tab
-    lastActiveTab = Integer.valueOf(getTabFolder().getSelectionIndex());
+    lastActiveTab = new Integer(getTabFolder().getSelectionIndex());
   }
 
 }
@@ -156,7 +156,10 @@ public class Settings extends AbstractView {
 
 /**********************************************************************
  * $Log$
- * Revision 1.42  2008-07-22 22:30:01  willuhn
+ * Revision 1.43  2008-08-29 14:30:36  willuhn
+ * @C Java 1.4 Compatibility - wieso zur Hoelle sind die Fehler vorher nie aufgefallen? Ich compiliere immer gegen 1.4? Suspekt
+ *
+ * Revision 1.42  2008/07/22 22:30:01  willuhn
  * @C Zum Speichern des letzten aktiven Tabs braucht man gar keine Session sondern nur einen statischen Integer. Keine Ahnung, warum ich das mal so umstaendlich implementiert hatte ;)
  *
  * Revision 1.41  2007/06/12 08:56:01  willuhn
